# gtcrn

./: .gitignore  CLAUDE.md  check_cache_fix.py  check_final_fix.py  check_offset.py  check_padding_fix.py  check_stream_fix.py  compare_all_versions.py  compare_c_py_centerfalse.py  compare_c_python.py  compare_c_python_stream.py  compare_c_vs_python.py  compare_energy.py  compare_first_frame_models.py  compare_output_spectrum.py  compare_python_stream.py  compare_spectrum.py  compare_stream_complete.py  compare_stream_simple.py  compare_stream_vs_offline.py  debug_cache_frames.py  debug_decoder.py  debug_decoder_corrected.py  debug_enconv0_channels.py  debug_engt2_detail.py  debug_engt2_hooks.py  debug_first_frame.py  debug_first_frames.py  debug_frame0.py  debug_frame_indexing.py  debug_grouped_conv.py  debug_grouped_conv_inputs.py  debug_intermediate.py  debug_layer_by_layer.py  debug_mask_application.py  debug_stft_compare.py  debug_stft_comparison.py  debug_stft_padding.py  debug_stream_frames.py  debug_stream_frames_py.py  (+17 more)
.claude/: settings.local.json
GTCRN_C/: CMakeLists.txt  README.md  build.bat  build.sh
GTCRN_C/.claude/: settings.local.json
GTCRN_C/demo/: debug_enconv0.c  debug_engt2.c  debug_forward.c  debug_full_forward.c  debug_gtconv.c  debug_stream_layers.c  debug_tra.c  main.c  main_stream.c  main_stream_debug.c  test_fft_roundtrip.c  test_frame0_debug.c  test_intermediate.c  test_istft_standalone.c  test_nn_compare.c  test_offline_frame10.c  test_save_spectrum.c  test_stft_frame0.c  test_stft_istft_roundtrip.c  test_stft_match.c  test_stream_debug.c  test_stream_spectrum.c  test_stream_vs_complete.c  wav_io.c  wav_io.h
GTCRN_C/documents/: DEBUG_TOOLS_GUIDE.md  GTCRN_C技术文档.md  GTCRN_QAT量化方案.md  STREAM_FIX_SUMMARY.md  stream_fix_analysis.md
GTCRN_C/include/: gtcrn_fft.h  gtcrn_layers.h  gtcrn_math.h  gtcrn_model.h  gtcrn_types.h
GTCRN_C/scripts/: analyze_weights.py  calc_struct_size.py  check_gtconv_values.py  check_pytorch_stft.py  check_streaming_ola.py  check_window_norm.py  compare_c_outputs.py  compare_c_pytorch.py  compare_frame_bounds.py  compare_layers.py  compare_ola_frames.py  compare_outputs.py  compare_single_frame.py  compare_spectrum_energy.py  compare_spectrum_level.py  compare_stft.py  compare_stft_detailed.py  compare_stream_detail.py  compare_window_app.py  comprehensive_comparison.py  create_test_cases.py  create_test_signal.py  debug_compare.py  debug_enconv0.py  debug_frame_detailed.py  debug_gtconv.py  debug_istft_ola.py  debug_layers.py  debug_nn_layers.py  debug_stft_center.py  debug_stream_compare.py  deep_energy_analysis.py  direct_comparison.py  export_all_tensors.py  export_stream_weights.py  export_weights.py  frame100_out_imag.npy  frame100_spec_imag.npy  frame100_spec_real.npy  precise_c_simulation.py  (+15 more)
GTCRN_C/src/: gtcrn_fft.c  gtcrn_forward.c  gtcrn_layers.c  gtcrn_math.c  gtcrn_model.c  gtcrn_stream.c
Unit_C/: CMakeLists.txt  README.md  README_NEW.md  convert_to_utf8.py
Unit_C/.claude/: settings.local.json
Unit_C/docs/: BATCHNORM_FUSION_README.md  BATCHNORM_QUICK_REF.md  BEFORE_AFTER_COMPARISON.md  CHECKLIST.md  CONVERSION_SUMMARY_16K.md  CONVTRANSPOSE2D_SUMMARY.md  ConvTranspose2d_README.md  DPGRNN_COMPLETE_IMPLEMENTATION.md  FINAL_FILES_LIST.md  FINAL_MISSING_ITEMS_CHECK.md  FINAL_RECOMMENDATION.md  FIXES_APPLIED.md  GRU_IMPLEMENTATION.md  GTCRN_MODEL_README.md  INDEX.md  INDEX_16K.md  INTEGRATION_COMPLETE.md  INTEGRATION_DONE.md  INTEGRATION_GUIDE.md  LAYERNORM_README.md  MISSING_PARTS_ANALYSIS.md  NN_LAYERS_QUICK_REF.md  NN_LAYERS_README.md  OPTIMIZED_VS_EXAMPLE.md  QUICKSTART_16K.md  QUICKSTART_FIXED.md  QUICK_REFERENCE.md  README_16K.md  README_COMPLETE.md  README_conv2d.md  REALTIME_FINAL_STATUS.md  REALTIME_IMPLEMENTATION_GUIDE.md  SECOND_CHECK_REPORT.md  STREAMING_COMPILATION_GUIDE.md  STREAMING_IMPLEMENTATION_STATUS.md  STREAMING_MODIFICATIONS_SUMMARY.md  SUMMARY.md  TRA_COMPLETE_VERIFICATION.md  TRA_FIX_SUMMARY.md  VERIFICATION_REPORT_16K.md
Unit_C/examples/: conv_transpose2d_example.c  conv_transpose2d_visual.c  example_realtime_denoise.c  example_realtime_denoise_16k.c  example_use_complete_modules.c  fusion_visualization.c
Unit_C/include/: GRU.h  batchnorm2d.h  conv2d.h  gtcrn_model.h  gtcrn_modules.h  gtcrn_streaming.h  gtcrn_streaming_16k.h  layernorm.h  nn_layers.h  stft.h  stft_16k.h  stream_conv.h  weight_loader.h
Unit_C/scripts/: Makefile  Makefile_batchnorm  Makefile_conv2d  Makefile_fusion_viz  Makefile_gtcrn  Makefile_layernorm  Makefile_modules  Makefile_nn_layers  Makefile_transpose  Makefile_visual  build_16k.bat  build_16k.sh  build_and_run.bat  export_gru_weights.py  export_weights.py
Unit_C/src/: GRU.c  GRU_bidirectional_complete.c  batchnorm2d.c  conv2d.c  gtconvblock_forward.c  gtconvblock_forward_complete.c  gtcrn_model.c  gtcrn_model_complete.c  gtcrn_modules.c  gtcrn_streaming.c  gtcrn_streaming_16k.c  gtcrn_streaming_impl.c  gtcrn_streaming_optimized.c  gtcrn_streaming_optimized_16k.c  layernorm.c  nn_layers.c  stft.c  stft_16k.c  stream_conv.c  weight_loader.c
Unit_C/tests/: test_batchnorm_fusion.c  test_conv2d.c  test_dpgrnn.c  test_gru.c  test_gtcrn_model.c  test_gtcrn_modules.c  test_layernorm.c  test_nn_layers.c  test_tra_stream.c
checkpoints/: best_model_002.tar  best_model_142.tar
document/: GTCRN_DTLN_MCU移植分析报告.md  gtcrn-porting-report.md  关于GTCRN-DTLN在RT1052芯片移植的可能性.pptx
onnx_models/: best_model_020.tar  best_model_025.tar  best_model_035.tar  best_model_045-5db-20db.tar  best_model_045-6db-15db.tar  gtcrn_48k.onnx  gtcrn_48k_simple.onnx
stream/: gtcrn_stream.py
stream/onnx_models/: stream_gtcrn.onnx
stream/test_wavs/: 00003_1_fan_noise_level1_snr+5dB_noisy.pkf  1.pkf  1_03.pkf  enh.pkf  enh_onnx.pkf  process.py
test_wavs/clean_16khz/: 00001_1_fan_noise_level1_snr-5dB_clean.pkf  change_name.py
test_wavs/debug_layers/: py_enconv0.npy  py_enconv1.npy  py_erb.npy  py_feat.npy  py_output.npy  py_sfe.npy  py_spec_input.npy
test_wavs/noisy/: 00003_1_fan_noise_level1_snr+5dB_noisy.pkf  00025_1_keyboard_loud_snr-5dB_noisy.pkf  (+4 more)
(+13 files in other folders)
